# Logger

./: CMakeLists.txt  Logger.pro  README.md  conanfile.py
.projectmanager/: Doxyfile  project.list
inc/Logger/: Logger.hpp
inc/version/: version.hpp
projects/Logger/: Doxyfile  Logger.cpp  Logger.hpp  Logger.pro
projects/Logger/inc/: Logger.hpp
projects/Logger/inc/version/: version.hpp
projects/Logger/src/: Logger.cpp
src/: Logger.cpp  version.hpp
